# wasm96

./: AGENTS.md  Cargo.toml  README.md  justfile
example/assemblyscript-guest/: .eslintrc.js  .gitignore  README.md  asconfig.json  justfile  main.as.ts  package.json  tsconfig.json
example/c-guest/: Makefile  main.c  wasm96.h
example/cpp-guest/: .gitignore  CMakeLists.txt  Makefile  main.cpp  wasm32-wasi-toolchain.cmake  wasm96.hpp
example/go-guest/: go.mod  justfile  main.go
example/rust-guest-3d/: Cargo.toml
example/rust-guest-3d/src/: lib.rs
example/rust-guest-mp-platformer/: Cargo.toml  README.md
example/rust-guest-mp-platformer/src/: lib.rs
example/rust-guest-osmosis/src/: lib.rs
example/rust-guest-rapier/: Cargo.toml  README.md
example/rust-guest-rapier/.cargo/: config.toml
example/rust-guest-text/: Cargo.toml  README.md
example/rust-guest/src/: lib.rs
example/v-guest-2d/: justfile  main.v
example/v-guest-3d/: justfile  main.v
example/wat-guest/: README.md  main.wat  wat-guest.wasm
example/zig-guest/: build.zig
example/zig-guest-3d/: .gitignore  README.md  build.zig
libretro/config/: wasm96.cfg
libretro/info/: wasm96_libretro.info
scripts/: dist-examples.sh
wasm96-c-sdk/: wasm96.h
wasm96-core/: Cargo.toml
wasm96-core/src/: dummy.rs  lib.rs  libretro_glue.rs
wasm96-cpp-sdk/: README_C_CPP_SDK.md  wasm96.hpp
wasm96-go-sdk/: go.mod  wasm96.go
wasm96-sdk/: Cargo.toml  README.md
wasm96-sdk/src/: lib.rs
wasm96-v-sdk/: README.md  wasm96.v
wasm96-zig-sdk/: build.zig
wasm96-zig-sdk/src/: main.zig
wit/: wasm96.wit
(+18 files in other folders)
